fix(layout): set layout title, root div align center

--- a/src/features/shared/layout/layout.scss
+++ b/src/features/shared/layout/layout.scss
@@ -9,6 +9,7 @@
 
 .layout-title {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   height: 61px;
   padding: 8px;
@@ -19,7 +20,7 @@
   }
 
   .left {
-    width: 48px;
+    width: 20px;
     height: 48px;
     padding: 0px 14px;
     display: flex;
@@ -31,8 +32,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    width: 247px;
     height: 36px;
     padding: 6px 8px;
     gap: 10px;
@@ -65,4 +64,5 @@
   gap: 8px;
   background: #191919;
   color: #FFF;
+  cursor: pointer;
 }
